added components to demo UI

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -7,9 +7,23 @@
   <header class="header">
     <h2>Demo with branded header</h2>
   </header>
+
+  <nav class="tab">
+    <ul class="tab__nav">
+      <li class="tab__nav-item">
+        <a href="#" class="tab__nav-link is-active">Home</a>
+      </li>
+      <li class="tab__nav-item">
+        <a href="#" class="tab__nav-link">Settings</a>
+      </li>
+      <li class="tab__nav-item">
+        <a href="#" class="tab__nav-link">Profile</a>
+      </li>
+  </nav>
+
   <div class="container">
     <p>
-      Tab focus between components. Notice the lack of clarity between color meaning... There's a lot of purple.
+      Tab focus between components. Notice the lack of clarity between <a href="#">color meaning</a>... There's a lot of purple.
     </p>
     <p>
       Stop hastling over changing individual colors by <b>first designating semantic meanings to each color application</b>. Then,
